view/locacao/style.css
body {
    font-family: Arial, sans-serif;
    background-color: #fff;
    margin: 0px;
    display: flex;
    align-items: center;
    justify-content: center;
    height: 100vh;
    overflow-y: hidden;
    flex-direction: column;
}

.payment-container {
    background-color: #fff;
    padding-left: 20px;
    padding-right: 60px;
    border-radius: 8px;
    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
    max-width: 400px;
    width: 100%;
    text-align: center;
    overflow-y: hidden;
    overflow-x: hidden;
    
}

label {
    display: flex;
    flex-direction: column;
    margin-bottom: 8px;
}

input,
select,
textarea {
    width: 100%;
    padding: 8px;
    margin-bottom: 16px;
    box-sizing: border-box;
}
textarea {
    resize: vertical;
}

button {
    background-color: #4caf50;
    color: #fff;
    padding: 10px;
    border: none;
    border-radius: 4px;
    cursor: pointer;
}

button:hover {
    background-color: #45a049;
}

.hidden {
    display: none;
    flex-direction: column;
}

.hidden-driver {
    display: none;
    flex-direction: column;
}

.driver-option {
    display: flex;
    justify-content: space-between;
    align-items: center;
    margin-bottom: 16px;
    text-align: left;
}

.driver-option label {
    flex: 1;
    margin-right: 8px;
    cursor: pointer;
    margin-right: 50px;
    
}

.driver-option input {
    flex-shrink: 0;
}

